2010-12-09  John W. Eaton  <jwe@octave.org>

	* plot/private/__pie__.m: Provide diagnositc for invalid
	optional arguments.  Use caller name instead of __pie__ in error
	messages.

2010-12-09  John W. Eaton  <jwe@octave.org>

	* statistics/tests/kolmogorov_smirnov_test.m: Try both DIST_cdf
	and DISTcdf functions.  Always use feval to call CDF function.
	Bug #31838.

2010-12-09  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Set major and grid linewidths from
	axis linewidth property.  Bug #31755.

2010-12-09  Rik  <octave@nomad.inbox5.com>

	* plot/__print_parse_opts__.m: Convert print resolution from char to
	double.  Fixes Bug #31834.

2010-12-09  Rik  <octave@nomad.inbox5.com>

	* plot/private/__pie__.m: Allow logical indices for 'explode' variable.

2010-12-09  Kai Habel  <kai.habel@gmx.de>

	* plot/pie3.m, plot/private/__pie__.m: New functions.
	* plot/pie.m: Move __pie__ function to plot/private, in order to be used
	by pie and pie3.
	* miscellaneous/unimplemented.m: Remove pie3.m from list of
	unimplemented functions.

2010-12-09  John W. Eaton  <jwe@octave.org>

	* time/datestr.m: Don't call localtime (mktime (tm)) to fill in
	missing elements of time strcture.  Bug #31079.

2010-12-08  Ben Abbott  <bpabbott@mac.com>

	* plot/fill.m: Fix bug that implies nextplot = "add".
	* image/imshow.m: Flip y-axis.

2010-12-08  John W. Eaton  <jwe@octave.org>

	* strings/strmatch.m: Avoid passing length of zero to strncmp.
	Bug #31774.

2010-12-07  John W. Eaton  <jwe@octave.org>

	* general/repmat.m: Handle special case of replicating scalar
	using an index vector containing zeros.  Bug #31775.

2010-12-06  Rik  <octave@nomad.inbox5.com>

	* plot/plot.m: Eliminate present tense in first sentence of docstring.

2010-12-06  Rik  <octave@nomad.inbox5.com>

	* plot/xlabel.m, plot/ylabel.m, plot/zlabel.m: Add additional calling
	form to docstring which returns handle (h)

2010-12-06  Rik  <octave@nomad.inbox5.com>
