@@ -1,3 +1,7 @@
+2010-12-10  Thorsten Meyer  <thorsten.meyier@gmx.de>
+
+	* statistics/tests/kolmogorov_smirnov_test.m: Add tests.
+
 2010-12-09  John W. Eaton  <jwe@octave.org>
 
 	* plot/private/__pie__.m: Provide diagnositc for invalid
